Changes since Beta 2
====================

.. to be merged into one "new in v8.0.0" entry later

Features
--------

* Show the filename of the missing file when ``nikola serve`` can't
  find a file (i.e. when an 404 error occurs).

Bugfixes
--------

* Implement ``MARKDOWN_EXTENSION_CONFIGS`` properly (Issue #2970)
* Ignore ``.DS_Store`` when processing listings (Issue #3099)

New in v8.0.0b2 (changes since Beta 1)
======================================


Important compatibility changes not mentioned previously
--------------------------------------------------------

* You need ``<a class="reference">`` (instead of ``image-reference``)
  to activate the lightbox now

Features
--------

* Add ``NAVIGATION_ALT_LINKS`` option, displayed on the right side in
  bootstrap4/bootblog4 (Issue #3030)
* Added documentation of Post objects to list of template variables
  (Issue #3003)
* Support featured posts in bootblog4 (Issue #2964)
* Add ``THEME_CONFIG`` setting that themes can use in any way
* Use youtube-nocookie.com for better privacy in ``youtube`` reST
  directive and improve the appearance of the player

Bugfixes
--------

* Improve appearance of ``bootblog4`` on mobile (Issue #3069)
* Make ``smartjoin`` more flexible (Issue #3080)
* Make post-list and post_list synonymous (Issue #3083)
* Support ``CATEGORY_DESTPATH_NAMES`` with pages following destpath
* Make ``CATEGORY_PAGES_FOLLOW_DESTPATH`` more resilient (Issue #3081)
* Guard against null items in gallery meta files (Issues #3076, #3077)
* Respect ``USE_FILENAME_AS_TITLE`` in galleries with a meta file
* Fix gallery metadata for multilingual sites (Issue #3078)

New in v8.0.0b1
===============

Important compatibility changes
-------------------------------

* Rename ``crumbs.tmpl`` to ``ui_helper.tmpl`` and the breadcrumbs
  ``bar`` function to ``breadcrumbs`` (your templates may need
  changing as well)
* Rename ``post.is_mathjax`` to ``post.has_math``. Themes using