@@ -623,7 +623,7 @@ class Post(object):
             deps.append(self.meta('data', lang))
         deps += self._get_dependencies(self._dependency_file_page[lang])
         deps += self._get_dependencies(self._dependency_file_page[None])
-        return sorted(deps)
+        return sorted(set(deps))
 
     def deps_uptodate(self, lang):
         """Return a list of uptodate dependencies to build this post's page.
@@ -664,14 +664,8 @@ class Post(object):
                 self.source_path, self.date))
 
     def fragment_deps(self, lang):
-        """Return a list of uptodate dependencies to build this post's fragment.
-
-        These dependencies should be included in ``uptodate`` for the task
-        which generates the fragment.
-        """
-        deps = []
-        if self.default_lang in self.translated_to:
-            deps.append(self.source_path)
+        """Return a list of dependencies to build this post's fragment."""
+        deps = [self.source_path]
         if os.path.isfile(self.metadata_path):
             deps.append(self.metadata_path)
         lang_deps = []
